Fixed the whitespace issue with redactor. And added a comment into EntityAttributeExtension about using propertypath

--- a/Resources/public/redactor/redactor.css
+++ b/Resources/public/redactor/redactor.css
@@ -46,7 +46,6 @@ body .redactor_box_fullscreen {
 	outline: none;
 	border: none;
 	width: 100%;
-	white-space: normal;
 }
 
 /*
